k8s-files/currency-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: currency
