k8s-files/currency-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: currency
spec:
  rules:
  - host: currency.com
    http:
      paths:
      - path: /
        backend:
          serviceName: currency-nodeport
          servicePort: 80
